# tomka

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs
.github/workflows/: ci-cd.yml  docker.yml  general.yml
configuration/: base.yaml
proto/: helloworld.proto  queue.proto
src/: client.rs  configuration.rs  health_check.rs  lib.rs  main.rs  queue.rs  startup.rs  types.rs
src/protobuf/: helloworld.rs  mod.rs  queue.rs
src/queue/: cb.rs  mod.rs
src/service/: mod.rs  publishing_queue.rs  result_queue.rs
tests/: helpers.rs  main.rs
