[package]
name = "dispatcher-service"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "tomka"

[[bin]]
path = "src/main.rs"
name = "dispatcher"

[dependencies]
#anyhow = "1.0.94"
#tracing = "0.1.41"
thiserror = "2.0.11"
tonic = {version = "0.12.3"}
prost = "0.13.4"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"]}
crossbeam = "0.8.4"
#futures = "0.3.31"

[build-dependencies]
tonic-build = { version = "0.12.3"}